<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.impl.RegisterActivity"
android:clipToPadding="true"
android:fitsSystemWindows="true">
<android.support.v7.widget.Toolbar
    android:id="@+id/register_main_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLucency"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_toolbar_imageView_back"
        android:background="@mipmap/baseline_keyboard_backspace_black_18dp"
        android:layout_gravity="left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/register_title"/>

</android.support.v7.widget.Toolbar>

<TextView
    android:id="@+id/register_title_textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="8dp"
    android:text="@string/app_name"
    android:textSize="50px"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_main_toolbar" />


<EditText
    android:id="@+id/register_editText_userName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:ems="10"
    android:inputType="number"
    android:hint="@string/register_user_hint"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_title_textView"
    android:maxLength="11"
    />

<EditText
    android:id="@+id/register_editText_nickName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:hint="昵称"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_editText_userName" />

<EditText
    android:id="@+id/register_editText_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
    android:ems="10"
    android:hint="@string/register_password_hint"
    android:inputType="textPassword"
    android:maxLength="15"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_editText_nickName" />

<EditText
    android:id="@+id/register_editText_confirm_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:hint="确认密码"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_editText_password"
    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
    android:maxLength="15"/>

<ImageView
    android:id="@+id/register_image_visable"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_marginTop="8dp"

    app:layout_constraintBottom_toBottomOf="@+id/register_editText_password"
    app:layout_constraintEnd_toEndOf="@+id/register_editText_password"
    app:layout_constraintHorizontal_bias="0.976"
    app:layout_constraintStart_toStartOf="@+id/register_editText_password"
    app:layout_constraintTop_toTopOf="@+id/register_editText_password"
    app:layout_constraintVertical_bias="0.142" />

<Button
    android:id="@+id/register_button_register"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="8dp"
    android:background="@color/colorPrimaryButton"
    android:text="@string/register_button_register"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_editText_confirm_password" />


</android.support.constraint.ConstraintLayout>